--- a/.gitconfig
+++ b/.gitconfig
@@ -4,5 +4,5 @@
 	process = git-lfs filter-process
 	required = true
 [user]
-	name = CosmicGlitch1
-	email = braveraptor99@gmail.com
+	name = GlitchDetected
+	email = 114450467+GlitchDetected@users.noreply.github.com
