modify and add scripts

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,11 +36,11 @@
   # add conflicted file on merge
   add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; git add `f`"
 
+  # Show the user email for the current repository.
+	whoami = config user.email
+
 [hub]
   protocol = https
-[user]
-	name = glitchdetected
-  email = braveraptor99@gmail.com
 [diff]
   tool = nvimdiff
 [difftool "nvimdiff"]
@@ -56,3 +56,5 @@
 	process = git-lfs filter-process
 [ghq]
   root = ~/.ghq
+[http]
+	postBuffer = 157286400
