--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
 set -g default-terminal "screen-256color"
 
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+# control a, s
+# set -g prefix C-a
+# unbind C-b
+# bind-key C-a send-prefix
 
 # tmux new -s testses
 # tmux detach
+# tmux attach -t testses
