--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 [general]
 import = [
-    "~/.config/alacritty/gruvbox.toml"
+    "~/.config/alacritty/themes/gruvbox.toml"
 ]
 
 [font]
@@ -8,3 +8,8 @@ normal = { family = "MesloLGS Nerd Font", style = "Regular" }
 bold = { family = "MesloLGS Nerd Font", style = "Bold" }
 italic = { family = "MesloLGS Nerd Font", style = "Italic" }
 bold_italic = { family = "MesloLGS Nerd Font", style = "Bold Italic" }
+size = 15
+
+[window]
+dimensions = { columns = 70, lines = 25 }
+opacity = 0.8
