--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,25 @@
 set -g default-terminal "screen-256color"
+set -g mouse on
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+
+bind-key n new-session \; \
+    send-keys 'nvim' C-m \; \
+    split-window -v \; \
+    send-keys 'bash' C-m \; \
+    select-pane -t 0
+
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R
+
+bind x kill-pane
+bind & kill-window
 
 # control a, s
 # set -g prefix C-a
