--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,11 @@
 set -g default-terminal "screen-256color"
-set -g mouse on
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
-bind-key n new-session \; \
-    send-keys 'nvim' C-m \; \
-    split-window -v \; \
-    send-keys 'bash' C-m \; \
-    select-pane -t 0
+# mouse stuff
+set -g mouse on
+unbind -T copy-mode MouseDragEnd1Pane
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -21,11 +20,27 @@ bind -r L resize-pane -R
 bind x kill-pane
 bind & kill-window
 
-# control a, s
-# set -g prefix C-a
-# unbind C-b
-# bind-key C-a send-prefix
+set -g history-limit 0
 
-# tmux new -s testses
-# tmux detach
-# tmux attach -t testses
+# open windows in same directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+# status bar config
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-justify centre
+set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-style fg=colour136,bg=colour235
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-left "#[fg=green,bright]#(whoami)#[default]"
+set-option -g status-right-length 140
+set-option -g status-right-style default
+set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -a 0) "
+set-window-option -g window-status-style fg=colour244
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-current-style fg=colour166
+set-window-option -g window-status-current-style bg=default
