--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,9 @@ set -g mouse on
 unbind -T copy-mode MouseDragEnd1Pane
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -20,12 +22,21 @@ bind -r L resize-pane -R
 bind x kill-pane
 bind & kill-window
 
-set -g history-limit 0
+set -g history-limit 100
 
 # open windows in same directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# Use vi keys in copy mode
+set-window-option -g mode-keys vi
+
+# Bind Ctrl+c to enter copy mode
+bind-key -n C-c copy-mode
+
+# Use Enter to copy selection to system clipboard
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 
 # status bar config
 set-option -g status on
@@ -44,3 +55,5 @@ set-window-option -g window-status-style fg=colour244
 set-window-option -g window-status-style bg=default
 set-window-option -g window-status-current-style fg=colour166
 set-window-option -g window-status-current-style bg=default
+
+run '~/.tmux/plugins/tpm/tpm'
