--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,9 @@ set -g mouse on
 unbind -T copy-mode MouseDragEnd1Pane
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
