--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,13 @@ set -g default-terminal "screen-256color"
 
 # mouse stuff
 set -g mouse on
+
+unbind -T root WheelUpPane
+unbind -T root WheelDownPane
+
+bind -T copy-mode-vi WheelUpPane   send -X scroll-up
+bind -T copy-mode-vi WheelDownPane send -X scroll-down
+
 unbind -T copy-mode MouseDragEnd1Pane
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
